Review 1: Class, Spacing and Corrections

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,23 +1,21 @@
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
-
 @font-face {
     font-family: hanken-grotesk;
-    src: url('HankenGrotesk-VariableFont_wght.ttf');
+    src: url('../fonts/HankenGrotesk-VariableFont_wght.ttf');
+    
   }
 
 body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: 100vh;
     font-family: hanken-grotesk;
     margin: 0;
     padding: 0;
 }
-
-#cont{
+flexBox{
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+.parentBox{
     display: flex;
     border-radius: 30px;
     border-color: black;
@@ -27,7 +25,7 @@ body{
     margin-bottom: 10px;
 }
 
-#fbox{
+.rightBox{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -39,21 +37,22 @@ body{
     width: 37vh;
 }
 
-#sbox{
+.leftBox{
     display: flex;
     color: hsl(218, 7%, 68%);
     border-radius: 8px;
     flex-direction: column;
     padding: 20px;
+    gap: 10px;
 }
 
-#t1{
+.heading{
     font-size: 18px;
     color: hsl(218, 9%, 82%);
     font-weight: 600;
 }
 
-#circle{
+.circle{
     background: linear-gradient(hsla(256, 72%, 46%, 1),hsla(241, 72%, 46%, 0));
     color: hsl(221, 100%, 96%);
     border-radius: 50%;
@@ -66,42 +65,46 @@ body{
     margin: 20px;
 }
 
-#total{
+.total{
     font-size: 60px;
     color: hsl(0, 0%, 100%);
     font-weight: 800;
 }
 
-#t2{
+.outOf{
     font-size: 14px;
     color:  rgb(161, 168, 180);
     font-weight: 600;
 }
 
-#t3{
+.wishes{
     font-size: 22px;
     color: hsl(0, 0%, 100%);
     font-weight: 700;
     margin: 10px;
 }
 
-#t4{
+.comments{
     display: flex;
     font-size: 16px;
     color: hsl(241, 100%, 89%);
     font-weight: 500;
     margin: 10px;
-    
+    text-align: center;    
 }
 
-#t5{
+.leftHeading{
     font-size: 18px;
     color: hsl(224, 30%, 27%);  
     font-weight: 800;
     margin: 10px;
 }
-
-#b1{
+label{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+.resultsOne{
     display: flex;
     justify-content: space-between;
     border-radius: 8px;
@@ -110,16 +113,12 @@ body{
     margin: 10px;
     margin-bottom: 20px;
 }
-
-#tb1{
+.textOne{
     color: hsl(0, 100%, 67%);
     font-weight: 700;
-    margin-right: 80px;
-    margin-left: 10px;
-    
 }
 
-#b2{
+.resultsTwo{
     display: flex;
     justify-content: space-between;
     border-radius: 8px;
@@ -128,15 +127,12 @@ body{
     margin: 10px;
     margin-bottom: 20px;
 }
-
-#tb2{
+.textTwo{
     color: hsl(39, 100%, 56%);
     font-weight: 700;
-    margin-right: 80px;
-    margin-left: 10px;
 }
 
-#b3{
+.resultsThree{
     display: flex;
     justify-content: space-between;
     border-radius: 8px;
@@ -146,13 +142,13 @@ body{
     margin-bottom: 20px;
 }
 
-#tb3{
+.textThree{
     color: hsl(166, 100%, 37%);
     font-weight: 700;
     margin-right: 80px;
 }
 
-#b4{
+.resultsFour{
     display: flex;
     justify-content: space-between;
     border-radius: 8px;
@@ -161,13 +157,13 @@ body{
     margin: 10px;
 }
 
-#tb4{
+.textFour{
     color: hsl(234, 85%, 45%);
     font-weight: 700;
     margin-right: 80px;
 }
 
-#bt5{
+.button{
     display: flex;
     justify-content: center;
     background-color: hsl(224, 30%, 27%);
@@ -179,21 +175,24 @@ body{
     margin-top: 20px;
 }
 
-#bt5:hover{
+.button:hover{
     background: linear-gradient(hsl(252, 100%, 67%),hsl(241, 81%, 54%));   
     color: hsl(0, 0%, 100%);
 }
 
-#indSB{
+.score{
     color: hsl(224, 30%, 27%);
     font-weight: 800;
+}
+.outOf2{
+    font-weight: 400;
 }
 
 @media only screen and (max-width: 376px) {
     body {
         flex-direction: column;
     }
-    #cont{
+    .parentBox{
         flex-direction: column;
     }
   }
